add test elements

--- a/tests/colors.html
+++ b/tests/colors.html
@@ -1,13 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pie CSS: Colors Test Document</title>
-  <!-- Import color styles -->
-</head>
-<body>
-  <!-- Test elements go here -->
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Pie CSS: Colors Test Document</title>
+		<!-- Import color styles -->
+		<link rel="stylesheet" href="../dist/colors/index.min.css" />
+	</head>
+
+	<style>
+		.bg-element {
+			width: 50px;
+			height: 50px;
+			border-radius: 4px;
+			box-sizing: border-box;
+		}
+
+		.container {
+			box-sizing: border-box;
+			display: inline-flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			flex-basis: 10%;
+			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		}
+	</style>
+
+	<body>
+		<!-- Test elements go here -->
+		<div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
+			<div class="container">
+				<span class="bg-element bg-red"></span>
+				<p>Red</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-orange-yellow"></span>
+				<p>Orange Yellow</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-roman-sliver"></span>
+				<p>Roman Silver</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-blue"></span>
+				<p>Blue</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-green"></span>
+				<p>Green</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-viridian-green"></span>
+				<p>Viridian Green</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-emerald"></span>
+				<p>Emerald</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-english-red"></span>
+				<p>English Red</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-lemon-glacier"></span>
+				<p>Lemon Glacier</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-sage"></span>
+				<p>Sage</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-bittersweet"></span>
+				<p>Bittersweet</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-isabeline"></span>
+				<p>Isabeline</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-dark-slate-gray"></span>
+				<p>Dark Slate Gray</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-red-munsel"></span>
+				<p>Red Munsel</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-primary"></span>
+				<p>Primary</p>
+			</div>
+			<div class="container">
+				<span class="bg-element bg-secondary"></span>
+				<p>Secondary</p>
+			</div>
+			<div class="container">
+				<p></p>
+			</div>
+			<div class="container">
+				<p></p>
+			</div>
+			<div class="container">
+				<p></p>
+			</div>
+			<div class="container">
+				<p></p>
+			</div>
+			<span class="bg-element bg-info"></span>
+			<span class="bg-element bg-warning"></span>
+			<span class="bg-element bg-success"></span>
+			<span class="bg-element bg-muted"></span>
+		</div>
+	</body>
 </html>
