update button component

--- a/tests/components.html
+++ b/tests/components.html
@@ -6,9 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pie CSS: Component Test Document</title>
 		<!-- Import component styles -->
-		<link rel="stylesheet" href="../dist/components/Card/all.min.css" />
+		<link rel="stylesheet" href="../dist/components/Button/index.min.css" />
 	</head>
 	<body>
 		<!-- Test elements go here -->
+		<button class="button">Button</button>
 	</body>
 </html>
