add roundess styles

--- a/tests/misc.html
+++ b/tests/misc.html
@@ -23,5 +23,10 @@
 		<div class="container shad-3"></div>
 		<div class="container shad-4"></div>
 		<div class="container shad-5"></div>
+		<div class="container shad-0 rd-xs"></div>
+		<div class="container shad-0 rd-sm"></div>
+		<div class="container shad-0 rd-md"></div>
+		<div class="container shad-0 rd-lg"></div>
+		<div class="container shad-0 rd-xlg"></div>
 	</body>
 </html>
