update border styles

--- a/tests/misc.html
+++ b/tests/misc.html
@@ -17,16 +17,34 @@
 	</style>
 
 	<body>
+		<p>Shadows</p>
 		<div class="container shad-0"></div>
 		<div class="container shad-1"></div>
 		<div class="container shad-2"></div>
 		<div class="container shad-3"></div>
 		<div class="container shad-4"></div>
 		<div class="container shad-5"></div>
+		<p>Roundness</p>
 		<div class="container shad-0 rd-xs"></div>
 		<div class="container shad-0 rd-sm"></div>
 		<div class="container shad-0 rd-md"></div>
 		<div class="container shad-0 rd-lg"></div>
 		<div class="container shad-0 rd-xlg"></div>
+		<p>Borders</p>
+		<div class="container bor bor-sty-solid bor-sz-xs"></div>
+		<div class="container bor bor-sty-solid bor-sz-sm"></div>
+		<div class="container bor bor-sty-solid bor-sz-md"></div>
+		<div class="container bor bor-sty-solid bor-sz-lg"></div>
+		<div class="container bor bor-sty-solid bor-sz-xlg"></div>
+		<div class="container bor bor-sty-dotted bor-sz-xs"></div>
+		<div class="container bor bor-sty-dotted bor-sz-sm"></div>
+		<div class="container bor bor-sty-dotted bor-sz-md"></div>
+		<div class="container bor bor-sty-dotted bor-sz-lg"></div>
+		<div class="container bor bor-sty-dotted bor-sz-xlg"></div>
+		<div class="container bor bor-sty-dashed bor-sz-xs"></div>
+		<div class="container bor bor-sty-dashed bor-sz-sm"></div>
+		<div class="container bor bor-sty-dashed bor-sz-md"></div>
+		<div class="container bor bor-sty-dashed bor-sz-lg"></div>
+		<div class="container bor bor-sty-dashed bor-sz-xlg"></div>
 	</body>
 </html>
