--- a/tests/components.html
+++ b/tests/components.html
@@ -6,10 +6,53 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pie CSS: Component Test Document</title>
 		<!-- Import component styles -->
-		<link rel="stylesheet" href="../dist/components/Button/index.min.css" />
+		<link rel="stylesheet" href="../dist/components/Card/index.css" />
+		<link rel="stylesheet" href="../dist/components/Link/index.css" />
 	</head>
 	<body>
 		<!-- Test elements go here -->
-		<button class="button">Button</button>
+		<div class="cards">
+			<div class="card">
+				<div class="card-image">
+					<img src="./nathan-anderson-GgRMYjsEJ_s-unsplash.jpg" alt="">
+				</div>
+				<h3 class="card-header">Something</h3>
+				<div class="card-content">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis adipisci voluptate ipsam aspernatur rem provident culpa similique! Ducimus, ipsum! Nemo ad accusamus doloribus! Soluta amet facilis nihil molestias nesciunt officiis.
+				</div>
+				<button class="card-btn is-red">somthinfgsdd</button>
+			</div>
+			<div class="card">
+				<div class="card-image">
+					<img src="./nathan-anderson-GgRMYjsEJ_s-unsplash.jpg" alt="">
+				</div>
+				<h3 class="card-header">Something</h3>
+				<div class="card-content">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis adipisci voluptate ipsam aspernatur rem provident culpa similique! Ducimus, ipsum! Nemo ad accusamus doloribus! Soluta amet facilis nihil molestias nesciunt officiis.
+				</div>
+				<button class="card-btn is-red">somthinfgsdd</button>
+			</div>
+			<div class="card">
+				<div class="card-image">
+					<img src="./nathan-anderson-GgRMYjsEJ_s-unsplash.jpg" alt="">
+				</div>
+				<h3 class="card-header">Something</h3>
+				<div class="card-content">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis adipisci voluptate ipsam aspernatur rem provident culpa similique! Ducimus, ipsum! Nemo ad accusamus doloribus! Soluta amet facilis nihil molestias nesciunt officiis.
+				</div>
+				<button class="card-btn is-red">somthinfgsdd</button>
+			</div>
+			<div class="card">
+				<div class="card-image">
+					<img src="./nathan-anderson-GgRMYjsEJ_s-unsplash.jpg" alt="">
+				</div>
+				<h3 class="card-header">Something</h3>
+				<div class="card-content">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis adipisci voluptate ipsam aspernatur rem provident culpa similique! Ducimus, ipsum! Nemo ad accusamus doloribus! Soluta amet facilis nihil molestias nesciunt officiis.
+				</div>
+				<button class="card-btn is-red">somthinfgsdd</button>
+			</div>
+		</div>
+		<a href="#" class="link">lorem</a>
 	</body>
 </html>
