--- a/tests/colors.html
+++ b/tests/colors.html
@@ -1,116 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Pie CSS: Colors Test Document</title>
-		<!-- Import color styles -->
-		<link rel="stylesheet" href="../dist/colors/index.min.css" />
-	</head>
 
-	<style>
-		.bg-element {
-			width: 50px;
-			height: 50px;
-			border-radius: 4px;
-			box-sizing: border-box;
-		}
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Pie CSS: Colors Test Document</title>
+	<!-- Import color styles -->
+	<link rel="stylesheet" href="../dist/colors/index.min.css" />
+	<link rel="stylesheet" href="../dist/components/Button/index.min.css" />
+	<link rel="stylesheet" href="../dist/components/Link/link.css" />
+	<link rel="stylesheet" href="../dist/components/index.min.css" />
+</head>
 
-		.container {
-			box-sizing: border-box;
-			display: inline-flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			flex-basis: 10%;
-			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-		}
-	</style>
+<style>
+	.bg-element {
+		width: 125px;
+		height: 125px;
+		border-radius: 4px;
+		box-sizing: border-box;
+	}
 
-	<body>
-		<!-- Test elements go here -->
-		<div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
-			<div class="container">
-				<span class="bg-element bg-red"></span>
-				<p>Red</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-orange-yellow"></span>
-				<p>Orange Yellow</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-roman-sliver"></span>
-				<p>Roman Silver</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-blue"></span>
-				<p>Blue</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-green"></span>
-				<p>Green</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-viridian-green"></span>
-				<p>Viridian Green</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-emerald"></span>
-				<p>Emerald</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-english-red"></span>
-				<p>English Red</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-lemon-glacier"></span>
-				<p>Lemon Glacier</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-sage"></span>
-				<p>Sage</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-bittersweet"></span>
-				<p>Bittersweet</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-isabeline"></span>
-				<p>Isabeline</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-dark-slate-gray"></span>
-				<p>Dark Slate Gray</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-red-munsel"></span>
-				<p>Red Munsel</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-primary"></span>
-				<p>Primary</p>
-			</div>
-			<div class="container">
-				<span class="bg-element bg-secondary"></span>
-				<p>Secondary</p>
-			</div>
-			<div class="container">
-				<p></p>
-			</div>
-			<div class="container">
-				<p></p>
-			</div>
-			<div class="container">
-				<p></p>
-			</div>
-			<div class="container">
-				<p></p>
-			</div>
-			<span class="bg-element bg-info"></span>
-			<span class="bg-element bg-warning"></span>
-			<span class="bg-element bg-success"></span>
-			<span class="bg-element bg-muted"></span>
+	.container {
+		box-sizing: border-box;
+		display: inline-flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		flex-basis: 15%;
+		font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	}
+</style>
+
+<body>
+	<!-- Test elements go here -->
+	<p>Pie-CSS gives's you these varites colors to choose from</p>
+	<div style="display: flex; flex-wrap: wrap; justify-content: space-around">
+		<div class="container">
+			<span class="bg-element bg-red"></span>
+			<p>Red</p>
 		</div>
-	</body>
+		<div class="container">
+			<span class="bg-element bg-blue"></span>
+			<p>Blue</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-green"></span>
+			<p>Green</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-viridian-green"></span>
+			<p>Viridian Green</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-emerald"></span>
+			<p>Emerald</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-english-red"></span>
+			<p>English Red</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-lemon-glacier"></span>
+			<p>Lemon Glacier</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-sage"></span>
+			<p>Sage</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-bittersweet"></span>
+			<p>Bittersweet</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-isabeline"></span>
+			<p>Isabeline</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-dark-slate-gray"></span>
+			<p>Dark Slate Gray</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-red-munsel"></span>
+			<p>Red Munsel</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-info"></span>
+			<p>Info</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-warning"></span>
+			<p>Warning</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-success"></span>
+			<p>Success</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-roman-silver"></span>
+			<p>Roman Sliver</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-danger"></span>
+			<p>Danger</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-dark"></span>
+			<p>Dark</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-pink"></span>
+			<p>Pink</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-purple"></span>
+			<p>Purple</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-deep-purple"></span>
+			<p>Deep Purple</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-deep-orange"></span>
+			<p>Deep Orange</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-indigo"></span>
+			<p>Indigo</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-light-blue"></span>
+			<p>Light Blue</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-cyan"></span>
+			<p>Cyan</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-teal"></span>
+			<p>Teal</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-light-green"></span>
+			<p>Light Green</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-lime"></span>
+			<p>Lime</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-yellow"></span>
+			<p>Yellow</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-amber"></span>
+			<p>Amber</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-orange"></span>
+			<p>Orange</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-brown"></span>
+			<p>Brown</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-grey"></span>
+			<p>Grey</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-blue-grey"></span>
+			<p>Blue Grey</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-black"></span>
+			<p>Black</p>
+		</div>
+		<div class="container">
+			<span class="bg-element bg-white"></span>
+			<p>White</p>
+		</div>
+	</div>
+	<div class="container">
+		<h2 class="title">Usagae</h2>
+	</div>
+	<button class="button float-right">
+		<a href="./components.html" class="button link link-is-black">Components</a>
+	</button>
+</body>
+
 </html>
