--- a/tests/components.html
+++ b/tests/components.html
@@ -6,14 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pie CSS: Component Test Document</title>
 		<!-- Import component styles -->
-		<link rel="stylesheet" href="../dist/components/Card/index.css" />
-		<link rel="stylesheet" href="../dist/components/Link/index.css" />
+		<link rel="stylesheet" href="../dist/components/index.css" />
 	</head>
 	<body>
 		<!-- Test elements go here -->
 		<div class="cards">
 			<div class="card">
-				<div class="card-image">
+				<div class="card-profile">
 					<img src="./nathan-anderson-GgRMYjsEJ_s-unsplash.jpg" alt="">
 				</div>
 				<h3 class="card-header">Something</h3>
@@ -48,11 +47,82 @@
 				</div>
 				<h3 class="card-header">Something</h3>
 				<div class="card-content">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis adipisci voluptate ipsam aspernatur rem provident culpa similique! Ducimus, ipsum! Nemo ad accusamus doloribus! Soluta amet facilis nihil molestias nesciunt officiis.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
 				</div>
-				<button class="card-btn is-red">somthinfgsdd</button>
+				<div class="card-action">
+					<button class="card-btn is-red">somthinfgsdd</button>
+				</div>
 			</div>
 		</div>
-		<a href="#" class="link">lorem</a>
+		<a href="#" class="link link-is-danger">lorem</a>
+
+		<form action="push">
+			<label>Username:</label>
+			<input type="text" placeholder="Username" required><br>
+			<label>Password:</label>
+			<input type="password" placeholder="Password" required>
+		</form>
+		<div class="container">
+			<button class="accordion">
+				Accordion
+			</button>
+			<div class="accordion-content">
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, molestiae!</p>
+			</div>
+			<button class="accordion">
+				Accordion
+			</button>
+			<div class="accordion-content">
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, molestiae!</p>
+			</div>
+		</div>
+		<div class="container">
+			<header class="is-blue">
+				<div class="logo">
+					<img src="./nathan-anderson-GgRMYjsEJ_s-unsplash.jpg" alt="">
+				</div>
+				<div class="nav-menu">
+					<a href="#" class="nav-link">Home</a>
+					<a href="#" class="nav-link">About Us</a>
+					<a href="#" class="nav-link">Contact Us</a>
+				</div>
+				<div class="burger">
+					<div class="line1"></div>
+					<div class="line2"></div>
+					<div class="line3"></div>
+				</div>
+			</div>
+			</header>
+		</div>
 	</body>
+	<script src="../src/components/Js/index.js"></script>
 </html>
