--- a/tests/components.html
+++ b/tests/components.html
@@ -8,7 +8,6 @@
 	<title>Pie CSS: Component Test Document</title>
 	<!-- Import component styles -->
 	<link rel="stylesheet" rel="preload" href="../dist/components/index.min.css" />
-	<!-- <link rel="stylesheet" href="../fontawesome/css/all.min.css" /> -->
 </head>
 <style>
 	.placeholder {
@@ -19,23 +18,42 @@
 </style>
 
 <body>
-	<header class="bg-red">
+	<header>
 		<div class="logo">
 			<img src="./nathan-anderson-GgRMYjsEJ_s-unsplash.jpg" alt="">
 		</div>
-		<div class="nav-menu">
-			<a href="#" class="nav-link">Home</a>
-			<a href="#" class="nav-link">About Us</a>
-			<a href="#" class="nav-link">Contact Us</a>
-
-		</div>
-		<div class="burger">
-			<div class="line1"></div>
-			<div class="line2"></div>
-			<div class="line3"></div>
-		</div>
-		</div>
+		<div class="nav-panel">
+			<i class="material-icons icon-is-24px">shop_cate</i>
+			<i class="material-icons icon-is-24px">shop_cate</i>
+			<div class="nav-menu">
+				<a href="#" class="nav-link">Home</a>
+				<a href="#" class="nav-link">About Us</a>
+				<a href="#" class="nav-link">Contact Us</a>
+			</div>
+			<div class="burger">
+				<div class="line1"></div>
+				<div class="line2"></div>
+				<div class="line3"></div>
+			</div>
 	</header>
+	</div>
+	<div class="hero-banner">
+		<img src="./nathan-anderson-GgRMYjsEJ_s-unsplash.jpg" alt="">
+		<div class="hero-content">
+			<span class="hero-header">Lorem ipsum, dolor sit amet consectetur</span>
+			<span class="hero-text">
+				Lorem ipsum dolor, sit amet consectetur adipisicing
+				elit. Consectetur, esse impedit repudiandae ex ut culpa?
+			</span>
+			<button class="cta">Get started</button>
+		</div>
+		<div class="hero-socials">
+			<i class="material-icons">facebook</i>
+			<i class="material-icons">snapchat</i>
+			<i class="material-icons">whatsapp</i>
+			<i class="material-icons">twitter</i>
+		</div>
+	</div>
 	<div class="container">
 		<div class="cards">
 			<div class="card">
@@ -286,7 +304,5 @@
 <script src="../src/components/Js/back-to-top.js"></script>
 <script src="../src/components/Js/navbar.js"></script>
 <script src="../src/components/Js/card-truncate.js"></script>
-
-<!-- <script src="../fontawesome/js/all.min.js"></script> -->
 
 </html>
