--- a/tests/button.html
+++ b/tests/button.html
@@ -7,17 +7,14 @@
     <title>Pie-CSS</title>
     <link rel="stylesheet" href="../dist/index.css" />
   </head>
-  <style>
-    span {
-      margin-bottom: 20px;
-    }
-  </style>
-
+//FXME:the social button
   <body>
-    <div class="default-btn">
-      <h2>Button</h2>
-      <p>A standard button</p>
-      <button class="button">Button</button>
+    <div class="container">
+      <div class="default-btn">
+        <h2>Button</h2>
+        <p>A standard button</p>
+        <button class="button">Button</button>
+      </div>
     </div>
     <div class="container">
       <h2>Colored button</h2>
@@ -31,26 +28,26 @@
       <h2>Icon button</h2>
       <p>A button can have only an icon</p>
       <button class="icon">
-        <img src="./plane.svg" alt="">
+        <span class="material-icons">house</span>
     </button>
     </div>
     <div class="container">
       <h2>Social media buttons</h2>
       <p>A button can be formatted to link to a social website</p>
       <button class="social-button is-blue">
-        <img src="./plane.svg" alt="">
-        facebook
+        <span class="material-icons social-icon">facebook</span>
+        <span>facebook</span>
     </button>
       <button class="social-button is-pink">
-        <img src="./plane.svg" alt="">
+        <span class="material-icons">instagram</span>
         Instagram
     </button>
       <button class="social-button is-yellow">
-        <img src="./plane.svg" alt="">
+        <span class="material-icons social-icon">snapchat</span>
         Snapchat
     </button>
       <button class="social-button is-black">
-        <img src="./plane.svg" alt="">
+        <span class="material-icons social-icon">tiktok</span>
         Tiktok
     </button>
     </div>
@@ -58,7 +55,7 @@
       <h2>Circular buttons</h2>
       <p>A button can be circular</p>
       <button class="is-circular">
-        <img src="./plane.svg" alt="">
+        <span class="material-icons">tiktok</span>
     </button>
     </div>
     <div class="container">
