--- a/tests/table.html
+++ b/tests/table.html
@@ -10,24 +10,32 @@
 </head>
 
 <body>
-    <div class="container table-is-responsive">
+    <div class="container">
         <table>
             <tr>
                 <th>loerm</th>
                 <th>loerm</th>
                 <th>loerm</th>
+                <th>loerm</th>
+                <th>loerm</th>
             </tr>
             <tr>
                 <td>Something</td>
                 <td>Something</td>
                 <td>Something</td>
-            </tr>
-            <tr>
-                <td>Something</td>
                 <td>Something</td>
                 <td>Something</td>
             </tr>
             <tr>
+                <td>Something</td>
+                <td>Something</td>
+                <td>Something</td>
+                <td>Something</td>
+                <td>Something</td>
+            </tr>
+            <tr>
+                <td>Something</td>
+                <td>Something</td>
                 <td>Something</td>
                 <td>Something</td>
                 <td>Something</td>
