--- a/tests/button.html
+++ b/tests/button.html
@@ -1,69 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pie-CSS</title>
-    <link rel="stylesheet" href="../dist/index.css" />
-  </head>
-//FXME:the social button
-  <body>
-    <div class="container">
-      <div class="default-btn">
-        <h2>Button</h2>
-        <p>A standard button</p>
-        <button class="button">Button</button>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pie-CSS</title>
+  <link rel="stylesheet" href="../dist/index.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="default-btn">
+      <h2>Button</h2>
+      <p>A standard button</p>
+      <button class="button">Button</button>
     </div>
-    <div class="container">
-      <h2>Colored button</h2>
-      <p>A button can have different colors</p>
-      <button class="button is-red is-red-on-hover">Button</button>
-      <button class="button is-success">Button</button>
-      <button class="button is-warning">Button</button>
-      <button class="button is-info">Button</button>
-    </div>
-    <div class="container">
-      <h2>Icon button</h2>
-      <p>A button can have only an icon</p>
-      <button class="icon">
-        <span class="material-icons">house</span>
+  </div>
+  <div class="container">
+    <h2>Colored button</h2>
+    <p>A button can have different colors</p>
+    <button class="button is-red is-red-on-hover">Button</button>
+    <button class="button is-success">Button</button>
+    <button class="button is-warning">Button</button>
+    <button class="button is-info">Button</button>
+  </div>
+  <div class="container">
+    <h2>Icon button</h2>
+    <p>A button can have only an icon</p>
+    <button class="icon">
+      <span class="material-icons">house</span>
     </button>
-    </div>
-    <div class="container">
-      <h2>Social media buttons</h2>
-      <p>A button can be formatted to link to a social website</p>
-      <button class="social-button is-blue">
-        <span class="material-icons social-icon">facebook</span>
-        <span>facebook</span>
+  </div>
+  <div class="container">
+    <h2>Social media buttons</h2>
+    <p>A button can be formatted to link to a social website</p>
+    <button class="social-button is-blue">
+      <span class="material-icons social-icon">facebook</span>
+      <span>facebook</span>
     </button>
-      <button class="social-button is-pink">
-        <span class="material-icons">instagram</span>
-        Instagram
+    <button class="social-button is-pink">
+      <span class="material-icons social-icon">instagram</span>
+      Instagram
     </button>
-      <button class="social-button is-yellow">
-        <span class="material-icons social-icon">snapchat</span>
-        Snapchat
+    <button class="social-button is-yellow">
+      <span class="material-icons social-icon">snapchat</span>
+      Snapchat
     </button>
-      <button class="social-button is-black">
-        <span class="material-icons social-icon">tiktok</span>
-        Tiktok
+    <button class="social-button is-black">
+      <span class="material-icons social-icon">tiktok</span>
+      <span class="content">Tiktok</span>
     </button>
-    </div>
-    <div class="container">
-      <h2>Circular buttons</h2>
-      <p>A button can be circular</p>
-      <button class="is-circular">
-        <span class="material-icons">tiktok</span>
+  </div>
+  <div class="container">
+    <h2>Circular buttons</h2>
+    <p>A button can be circular</p>
+    <button class="is-circular">
+      <span class="material-icons">tiktok</span>
     </button>
-    </div>
-    <div class="container">
-      <h2>float buttons</h2>
-      <p>A button can be floated to right</p>
-      <button class="button float-right">
-        button
-      </button>
-    </div>
-  </body>
+  </div>
+  <div class="container">
+    <h2>float buttons</h2>
+    <p>A button can be floated to right</p>
+    <button class="button float-right">
+      button
+    </button>
+  </div>
+</body>
+
 </html>
